--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-session": "^1.17.1",
     "glyphicons": "^0.2.0",
     "if-env": "^1.0.4",
+    "mongoose": "^5.9.20",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
