--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "reactstrap": "^8.4.1"
   }
 }
