--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.3",
     "express-session": "^1.17.1",
-    "glyphicons": "^0.2.0",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.20",
     "morgan": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0",
     "reactstrap": "^8.4.1"
   }
 }
