--- a/package.json
+++ b/package.json
@@ -53,11 +53,6 @@
     "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.20",
-    "morgan": "^1.10.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
-    "reactstrap": "^8.4.1"
+    "morgan": "^1.10.0"
   }
 }
