--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
