--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "client": "cd client && npm start",
     "install": "cd client && npm install",
     "build": "cd client && npm build",
-    "heroku-postbuild": "cd client && npm run build"
+    "heroku-postbuild": "cd client && npm run build",
+    "seed": "node scripts/seedDB.js"
   },
   "lint-staged": {
     "**/*.{js,jsx,json,css}": [
