--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "latest",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.5.1"
+    "react-validation": "^3.0.7",
+    "reactstrap": "^8.5.1",
+    "validator": "^13.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
