--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "RecipeBox",
+  "name": "recipebox",
   "version": "1.0.0",
   "description": "Organize and maintain your favorite recipes",
   "private": true,
   "engines": {
-    "node": "12.x"
+    "node": "12.x",
+    "npm": "6.x"
   },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
