working on the style on homepage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.ignoreWords": ["box", "recipe", "recipe box", "recipebox"]
+  "cSpell.ignoreWords": [
+    "box",
+    "correale",
+    "enest",
+    "enest correale vannak suos",
+    "recipe",
+    "recipe box",
+    "recipebox",
+    "suos",
+    "vannak"
+  ]
 }
